[gd_scene load_steps=19 format=3 uid="uid://bdpxdnxpe1f32"]

[ext_resource type="Script" path="res://Scenes/Testing/Dummy.gd" id="1_bnoq7"]
[ext_resource type="PackedScene" uid="uid://drg0sr7jdfiel" path="res://Scenes/UI/UIComponents/ActiveMon.tscn" id="2_ngl4v"]
[ext_resource type="PackedScene" uid="uid://b4tx6kmy763df" path="res://Scenes/Components/poke_slot.tscn" id="3_im3o3"]
[ext_resource type="Texture2D" uid="uid://cijlbc37pj4gd" path="res://icon.svg" id="4_c1ava"]
[ext_resource type="Script" path="res://Code/Resource Makers/CardResources/PokemonMaker.gd" id="5_qmu2x"]
[ext_resource type="Script" path="res://Code/Resource Makers/CardResources/CardMaker.gd" id="6_a73gx"]
[ext_resource type="Texture2D" uid="uid://cujjluirx6yyu" path="res://Art/Energy/48px-Grass-attack.png" id="7_evofb"]
[ext_resource type="Texture2D" uid="uid://dd1ywu5fsfsq1" path="res://Art/Energy/48px-Fire-attack.png" id="8_i8x23"]
[ext_resource type="Texture2D" uid="uid://dj2lgcygk1ups" path="res://Art/Energy/48px-Water-attack.png" id="9_1lptl"]
[ext_resource type="Texture2D" uid="uid://bqqg7qjfq0wqb" path="res://Art/Energy/48px-Lightning-attack.png" id="10_6xk3i"]
[ext_resource type="Texture2D" uid="uid://bnpgukh0in14j" path="res://Art/Energy/48px-Psychic-attack.png" id="11_gfdbx"]
[ext_resource type="Texture2D" uid="uid://chqgfpirjsldj" path="res://Art/Energy/48px-Fighting-attack.png" id="12_ddfjp"]
[ext_resource type="Texture2D" uid="uid://bkb5vi5elppq1" path="res://Art/Energy/48px-Darkness-attack.png" id="13_rfygd"]
[ext_resource type="Texture2D" uid="uid://gom7mkykamch" path="res://Art/Energy/48px-Metal-attack.png" id="14_ou0br"]
[ext_resource type="Texture2D" uid="uid://dht4h5jns71o5" path="res://Art/Energy/48px-Colorless-attack.png" id="15_om5dw"]
[ext_resource type="Texture2D" uid="uid://l6f5mmmcjnyq" path="res://Art/Energy/35px-Rainbow-attack.png" id="16_yrwp8"]

[sub_resource type="Resource" id="Resource_0lhvf"]
script = ExtResource("5_qmu2x")
HP = 200
retreat = 0
attacks = Array[Resource("res://Code/Resource Makers/PokemonSpecific/AttackMaker.gd")]([])
evo_stage = "Basic"
evolves_from = ""
considered = 0
owner = 0
type = 1
weak = 0
resist = 0

[sub_resource type="Resource" id="Resource_je7g4"]
script = ExtResource("6_a73gx")
name = "Dummy"
image = ExtResource("4_c1ava")
illustrator = ""
number = 0
rarity = 0
expansion = 0
categories = 1
pokemon_properties = SubResource("Resource_0lhvf")
fossil = false

[node name="Dummy" type="Control"]
layout_mode = 3
anchor_right = 0.597
anchor_bottom = 0.235
offset_right = 0.23999
offset_bottom = -0.200012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnoq7")

[node name="ActivePokemon" parent="." instance=ExtResource("2_ngl4v")]
layout_mode = 1

[node name="PokeSlot" parent="." node_paths=PackedStringArray("ui_slot") instance=ExtResource("3_im3o3")]
current_card = SubResource("Resource_je7g4")
ui_slot = NodePath("../ActivePokemon")

[node name="DummyActions" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 6.0
offset_right = 302.0
offset_bottom = 46.0
columns = 3
metadata/_edit_group_ = true

[node name="SetType" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Set Type
"

[node name="SetWeakness" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Set Weakness"

[node name="SetResistance" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Set Resistance"

[node name="EnergyOptions" type="OptionButton" parent="DummyActions"]
layout_mode = 2
item_count = 17
selected = 0
popup/item_0/text = "Grass"
popup/item_0/icon = ExtResource("7_evofb")
popup/item_0/id = 0
popup/item_1/text = "Fire"
popup/item_1/icon = ExtResource("8_i8x23")
popup/item_1/id = 1
popup/item_2/text = "Water"
popup/item_2/icon = ExtResource("9_1lptl")
popup/item_2/id = 2
popup/item_3/text = "Lightning"
popup/item_3/icon = ExtResource("10_6xk3i")
popup/item_3/id = 3
popup/item_4/text = "Psychic"
popup/item_4/icon = ExtResource("11_gfdbx")
popup/item_4/id = 4
popup/item_5/text = "Fighting"
popup/item_5/icon = ExtResource("12_ddfjp")
popup/item_5/id = 5
popup/item_6/text = "Darkness"
popup/item_6/icon = ExtResource("13_rfygd")
popup/item_6/id = 6
popup/item_7/text = "Metal"
popup/item_7/icon = ExtResource("14_ou0br")
popup/item_7/id = 7
popup/item_8/text = "Colorless"
popup/item_8/icon = ExtResource("15_om5dw")
popup/item_8/id = 8
popup/item_9/text = "Rainbow"
popup/item_9/icon = ExtResource("16_yrwp8")
popup/item_9/id = 9
popup/item_10/text = "Magma"
popup/item_10/id = 10
popup/item_11/text = "Aqua"
popup/item_11/id = 11
popup/item_12/text = "Dark Metal"
popup/item_12/id = 12
popup/item_12/disabled = true
popup/item_13/text = "FF"
popup/item_13/id = 13
popup/item_13/disabled = true
popup/item_14/text = "GL"
popup/item_14/id = 14
popup/item_14/disabled = true
popup/item_15/text = "WP"
popup/item_15/id = 15
popup/item_15/disabled = true
popup/item_16/text = "React"
popup/item_16/id = 16
popup/item_16/disabled = true

[node name="AddEnergy" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Add Energy"

[node name="RemoveEnergy" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Remove Energy"

[node name="OptionButton" type="OptionButton" parent="DummyActions"]
layout_mode = 2
item_count = 7
selected = 0
popup/item_0/text = "Poison"
popup/item_0/id = 0
popup/item_1/text = "Burn"
popup/item_1/id = 1
popup/item_2/text = "Sleep"
popup/item_2/id = 2
popup/item_3/text = "Paralysis"
popup/item_3/id = 3
popup/item_4/text = "Confusion"
popup/item_4/id = 4
popup/item_5/text = "Shockwave"
popup/item_5/id = 5
popup/item_6/text = "Imprison"
popup/item_6/id = 6

[node name="AddCondtion" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Add Condition"

[node name="ClearConditions" type="Button" parent="DummyActions"]
layout_mode = 2
text = "Clear Conditions"

[connection signal="pressed" from="DummyActions/SetType" to="." method="_on_set_type_pressed"]
[connection signal="pressed" from="DummyActions/SetWeakness" to="." method="_on_set_weakness_pressed"]
[connection signal="pressed" from="DummyActions/SetResistance" to="." method="_on_set_resistance_pressed"]
[connection signal="pressed" from="DummyActions/AddEnergy" to="." method="_on_add_energy_pressed"]
[connection signal="pressed" from="DummyActions/RemoveEnergy" to="." method="_on_remove_energy_pressed"]
[connection signal="pressed" from="DummyActions/AddCondtion" to="." method="_on_add_condtion_pressed"]
[connection signal="pressed" from="DummyActions/ClearConditions" to="." method="_on_clear_conditions_pressed"]
