extends Control

func _ready():
	$PokeSlot.refresh()

func _on_set_type_pressed():
	pass # Replace with function body.

func _on_set_weakness_pressed():
	pass # Replace with function body.

func _on_set_resistance_pressed():
	pass # Replace with function body.

func _on_add_energy_pressed():
	pass # Replace with function body.

func _on_remove_energy_pressed():
	pass # Replace with function body.

func _on_add_condtion_pressed():
	pass # Replace with function body.

func _on_clear_conditions_pressed():
	pass # Replace with function body.
